Prevent footer text from overflowing

--- a/css/styles.css
+++ b/css/styles.css
@@ -167,3 +167,7 @@ footer {
 		filter: invert();
 	}
 }
+
+.selmode {
+	word-wrap: break-word;
+}
